Fixed z-index ordering that blocked interaction with spec body.

--- a/assets/css/specification.css
+++ b/assets/css/specification.css
@@ -15,7 +15,6 @@
 
 .spec {
     counter-reset: h2;
-    z-index: -1;
 }
 
 .spec h2:before,
@@ -58,6 +57,10 @@
 .spec h4.panel-title:before {
     content: '';
     counter-increment: none;
+}
+
+.toc {
+    z-index: 1;
 }
 
 .toc ol {
